[project]
name = "appreview"
version = "0.1.0"
description = "Multi-agent graduate application review system using LangGraph and multi-model deliberation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-core>=1.2.23",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
